	  include/nuttx/fs.
	* include/nuttx/serial: Move all serial-driver related files from include/nuttx to
	  include/nuttx/serial.
	* include/nuttx/clock.h and sched/clock_initialize.c:  Add a new OS interface
	  called clock_sychronize() that can be used to re-synchronize the NuttX
	  system time with a hardware RTC.  This function is called normally at power
	  up but may also need to be called when recovering from certain low-power
	  usage states where the system time is no longer accurate.
	* arch/arm/src/calypso and arch/arm/include/calypso: Support for the TI "Calypso"
	  phone processor. Contributed by Denis Carilki and includes the work of Denis,
	  Alan Carvalho de Assis, and Stefan Richter.
	* configs/compal_e88 and configs/compal_e99:  Support for Compal e88 and e99 phones
	  Contributed by Denis Carilki and includes the work of Denis, Alan Carvalho de
	  Assis, and Stefan Richter.
	* arch/arm/src/lpc17xx: Several fixes for error that have crept in for the LPC17xx
	  DAC.  Contriburted by by Lzzy.
	* graphics/nxconsole:  Add a character driver that can be used as a console output
	  device for text output (still under development on initial check-in).
	* graphics/nxmu:  Fix several compilation errors that have crept into the multi-
	  user NX server because of lack of use.
	* graphics/nxconsole:  The NX text console is basically function (in multi-
	  user NX mode only).
	* arch/arm/src/stm32/stm32_i2c.c: Correct a bug in the STM32 I2C driver.  The
	  behavior of I2C status bits seems to be different between F1 and F4.
	* configs/stm3210e-eval/nxconsole:  New STM32 F1 configuration that runs the
	  NuttShell (NSH) within an NX window.
	* graphics/nxconsole/nxcon_sem.c:  Add protection from re-entrance with debug
	  is enabled.
	* include/nuttx/ascii.h and vt100.h:  Header files to centralize ASCII and
	  VT100 escape sequence definitions.
	* graphics/nxconsole/nxcon_vt100.c:  Add add framework to support VT100 escape
	  sequences in NxConsole.